fixes: minor changes to sizing and spacing

--- a/app/globals.css
+++ b/app/globals.css
@@ -76,7 +76,7 @@
     @apply text-[2.4rem] font-semibold;
   }
   h4 {
-    @apply text-[1.8] font-semibold;
+    @apply text-[1.1rem] font-semibold;
   }
   li::marker {
     @apply text-white/90 text-lg align-middle;
